--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "build": "npx tsc",
     "watch": "npx tsc --watch",
@@ -14,12 +13,19 @@
   "description": "",
   "dependencies": {
     "concurrently": "^9.2.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.3",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/fluent-ffmpeg": "^2.1.28",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.0.3",
     "typescript": "^5.9.3"
   }
