--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^7.2.0",
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -19,7 +20,8 @@
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "prisma": "^7.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
